welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:10: error: ';' expected but ')' found.
      setPos(0,getY())+1)
                        ^